--- a/public/style/main.css
+++ b/public/style/main.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 }
 
+body{
+    background-image: url("../images/background.png");
+}
+
 .center{
     text-align: center;
 }
