--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,6 +8,8 @@ html {
 
 body {
   overflow-x: hidden;
+  background: #000000;
+  background: linear-gradient(135deg, #0a0a0a 0%, #1a1a1a 100%);
 }
 
 ::-webkit-scrollbar {
